# quickjs-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  js_vm.cpp  js_vm.h  js_vm_environment.cpp  js_vm_environment.h  js_vm_manager.cpp  js_vm_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  quickjs.hpp  vcpkg.json
js_module/: gui.cpp  gui.h
